<resources>
    <string name="app_name">WGU Terms</string>
    <string name="action_settings">Settings</string>
    <string name="terms">Terms</string>
    <string name="main_screen">Main Screen</string>
    <string name="courses">Courses</string>
    <string name="assessments">Assessments</string>
    <string name="exit">Exit App</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="terms_list">Terms</string>
    <string name="title_activity_assessments_list">Assessments</string>
    <string name="title_activity_terms_list">Terms</string>
    <string name="title_activity_courses_list">Courses</string>
    <string name="select_a_term_from_the_dropdown_list">Select a term from the dropdown list</string>
    <string name="search">Search</string>
    <string name="select_a_course_from_the_dropdown_list">Select a course from the dropdown list</string>
    <string name="title_activity_term_detail">Term Detail</string>
    <string name="title_activity_course_detail">Course Detail</string>
    <string name="title_activity_assessment_detail">Assessment Detail</string>
    <string name="start_date">Start Date</string>
    <string name="term_title">Term Title</string>
    <string name="end_date">End Date</string>
    <string name="title_activity_notes_list">NotesListActivity</string>
</resources>
